ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__C_P_Designer_Content_Data__c/CnP_PaaS__C_P_Designer_Content_Data__c.object-meta.xml
<CustomObject>
    <label>C&amp;P Designer Content Data</label>
    <nameField>
        <label>C&amp;P Designer Content Data Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>C&amp;P Designer Content Data</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>