ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__C_P_Designer_Content_Data__c/fields/CnP_PaaS__C_P_Mail_Content_Data__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__C_P_Mail_Content_Data__c</fullName>
    <label>C&amp;P Mail Content Data</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>