ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__C_P_Designer_Content_Data__c/fields/CnP_PaaS__CnP_Designer__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__CnP_Designer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>C&amp;P Designer</label>
    <referenceTo>CnP_PaaS__CnP_Designer__c</referenceTo>
    <relationshipLabel>C&amp;P Designer Content Data</relationshipLabel>
    <relationshipName>C_P_Designer_Content_Data</relationshipName>
    <type>Lookup</type>
</CustomField>