ShakeCharity/ShakeSharityApp/force-app/main/default/objects/CnP_PaaS__C_P_Designer_Content_Data__c/fields/CnP_PaaS__Order_info__c.field-meta.xml
<CustomField>
    <fullName>CnP_PaaS__Order_info__c</fullName>
    <label>Order info</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>